create actor, category and film routes

--- a/sakila-business-webapi/src/main/resources/static/app/index.html
+++ b/sakila-business-webapi/src/main/resources/static/app/index.html
@@ -39,9 +39,9 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a href="#/ActorManagement">Actors</a></li>
+              <li><a href="#/FilmManagement">Films</a></li>
+              <li><a href="#/CategoryManagement">Categories</a></li>
             </ul>
           </div>
         </div>
@@ -49,26 +49,8 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+    	<div ng-view></div>
     </div>
-
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -87,7 +69,12 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/actor_service.js"></script>
+        <script src="scripts/services/category_service.js"></script>
+        <script src="scripts/services/film_service.js"></script>
+        <script src="scripts/controllers/actor_controller.js"></script>
+        <script src="scripts/controllers/film_controller.js"></script>
+        <script src="scripts/controllers/category_controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
