--- a/sakila-business-webapi/src/main/resources/static/app/index.html
+++ b/sakila-business-webapi/src/main/resources/static/app/index.html
@@ -26,22 +26,22 @@
         <div class="container">
           <div class="navbar-header">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+            <button type="button" class="navbar-toggle  collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">sakilaWebapiFrontend</a>
+            <a class="navbar-brand" href="#/">Sakila Store</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li><a href="#/ActorManagement">Actors</a></li>
-              <li><a href="#/FilmManagement">Films</a></li>
-              <li><a href="#/CategoryManagement">Categories</a></li>
+              <li><a ui-sref="actors">Actors</a></li>
+              <li><a ui-sref="films">Films</a></li>
+              <li><a ui-sref="categories">Categories</a></li>
             </ul>
           </div>
         </div>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="container">
-    	<div ng-view></div>
+    	<ui-view></ui-view>
     </div>
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -60,9 +60,9 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
