add Language CRUD

--- a/sakila-business-webapi/src/main/resources/static/app/index.html
+++ b/sakila-business-webapi/src/main/resources/static/app/index.html
@@ -42,6 +42,7 @@
               <li><a ui-sref="actors">Actors</a></li>
               <li><a ui-sref="films">Films</a></li>
               <li><a ui-sref="categories">Categories</a></li>
+              <li><a ui-sref="languages">Languages</a></li>
             </ul>
           </div>
         </div>
@@ -72,9 +73,11 @@
         <script src="scripts/services/actor_service.js"></script>
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/film_service.js"></script>
+        <script src="scripts/services/language_service.js"></script>
         <script src="scripts/controllers/actor_controller.js"></script>
         <script src="scripts/controllers/film_controller.js"></script>
         <script src="scripts/controllers/category_controller.js"></script>
+        <script src="scripts/controllers/language_controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
