--- a/sakila-business-webapi/src/main/resources/static/app/index.html
+++ b/sakila-business-webapi/src/main/resources/static/app/index.html
@@ -43,6 +43,9 @@
               <li><a ui-sref="films">Films</a></li>
               <li><a ui-sref="categories">Categories</a></li>
               <li><a ui-sref="languages">Languages</a></li>
+              <li><a ui-sref="cities">Cities</a></li>
+              <li><a ui-sref="countries">countries</a></li>
+              <li><a ui-sref="inventories">Inventories</a></li>
             </ul>
           </div>
         </div>
@@ -74,10 +77,16 @@
         <script src="scripts/services/category_service.js"></script>
         <script src="scripts/services/film_service.js"></script>
         <script src="scripts/services/language_service.js"></script>
+        <script src="scripts/services/inventory_service.js"></script>
+        <script src="scripts/services/city_service.js"></script>
+        <script src="scripts/services/country_service.js"></script>
         <script src="scripts/controllers/actor_controller.js"></script>
         <script src="scripts/controllers/film_controller.js"></script>
         <script src="scripts/controllers/category_controller.js"></script>
         <script src="scripts/controllers/language_controller.js"></script>
+        <script src="scripts/controllers/inventory_controller.js"></script>
+        <script src="scripts/controllers/city_controller.js"></script>
+        <script src="scripts/controllers/country_controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
