--- a/sakila-business-webapi/src/main/resources/static/app/index.html
+++ b/sakila-business-webapi/src/main/resources/static/app/index.html
@@ -46,6 +46,7 @@
               <li><a ui-sref="cities">Cities</a></li>
               <li><a ui-sref="countries">countries</a></li>
               <li><a ui-sref="inventories">Inventories</a></li>
+              <li><a ui-sref="customers">Customers</a></li>
             </ul>
           </div>
         </div>
@@ -80,6 +81,7 @@
         <script src="scripts/services/inventory_service.js"></script>
         <script src="scripts/services/city_service.js"></script>
         <script src="scripts/services/country_service.js"></script>
+        <script src="scripts/services/customer_service.js"></script>
         <script src="scripts/controllers/actor_controller.js"></script>
         <script src="scripts/controllers/film_controller.js"></script>
         <script src="scripts/controllers/category_controller.js"></script>
@@ -87,6 +89,7 @@
         <script src="scripts/controllers/inventory_controller.js"></script>
         <script src="scripts/controllers/city_controller.js"></script>
         <script src="scripts/controllers/country_controller.js"></script>
+        <script src="scripts/controllers/customer_controller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
