Fix angular js issues in the management's views

--- a/sakila-business-webapi/src/main/resources/static/app/index.html
+++ b/sakila-business-webapi/src/main/resources/static/app/index.html
@@ -44,7 +44,7 @@
               <li><a ui-sref="categories">Categories</a></li>
               <li><a ui-sref="languages">Languages</a></li>
               <li><a ui-sref="cities">Cities</a></li>
-              <li><a ui-sref="countries">countries</a></li>
+              <li><a ui-sref="countries">Countries</a></li>
               <li><a ui-sref="inventories">Inventories</a></li>
               <li><a ui-sref="customers">Customers</a></li>
             </ul>
